@startuml SkillSystem

abstract class Ability {
    -string name
    -int mana
    -int abilityPoints
    -int coolDownValue
    -int currentCoolDown

    + bool canActivate()
    + void activate()
}

class Heal {
    + applyEffect() 
}

class Shield {
    + applyEffect() 
}

class Strength {
    + applyEffect() 
}

class Player {
    - string name
    - int mana
    - int hp
    - int strength
    - int shield
    - vector abilities

    + void useAbility()
    + void increaseHp()
    + void increaseStrength()
    + void increaseShield()
    + void initializeAbilities()
    + void regenerateMana()
    + void adventure()
    + void updateCoolDowns()
    + void applyAbilityOnPlayer()
    + void consumeMana()
    + bool isDead()

}

class View {
    + void displayAbilities()
    + void displayMenu()
    + void displayPlayerStats()
    + void initialMenu()

}

' Relacionamentos baseados na estrutura de arquivos
Ability <|-- Heal
Ability <|-- Shield
Ability <|-- Strength

Player o-- Ability
View ..> Player : "visualiza"

@enduml